# jackal_waypoint_navigation

./: README.md
hokuyo_node/: CMakeLists.txt
hokuyo_node/cfg/: Hokuyo.cfg
hokuyo_node/src/: hokuyo_node.cpp
ublox/ublox_gps/config/: m8u_rover.yaml
waypoint_nav/: CMakeLists.txt  package.xml
waypoint_nav/config/: dual_ekf_jackal.yaml  gps_robot_localization.yaml  navsat_transform.yaml
waypoint_nav/launch/: point2laser.launch  scan_matching.launch
waypoint_nav/launch/outdoor/: jackal_dual_ekf.launch  jackal_outdoor.launch
waypoint_nav/map_files/: Iribe_lobby_cropped.pgm  Iribe_lobby_cropped.yaml  outdoor_map.yaml
waypoint_nav/rviz_config/: model.rviz
waypoint_nav/src/: frameid_con.cpp  gps_waypoint.cpp  laser2base_link.cpp
